[package]
authors = ["Weston Carlson <wez470@gmail.com>"]
name = "rugby"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.1"
env_logger = "0.7.1"
log = "0.4.8"
rand = "0.7.3"
regex = "1.3.7"
lazy_static = "1.4.0"
failure = "0.1.8"
failure_derive = "0.1.8"
tabwriter = "1.2.1"
structopt = "0.3.14"
enumflags2 = "0.6.4"
linefeed = "0.6.0"
hex = "0.4.2"

[dependencies.sdl2]
version = "0.34.0"
features = ["gfx"]

[dev-dependencies]
quickcheck = "0.9.2"

[profile.dev]
opt-level = 2
